--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="InformazioniBase">
       <div class="info-top-bar">
         <span style="text-align: left;">FLATFADE<br>2025</span>
-        <span>ESPERIENZA SINESTICA</span>
+        <span><div style="border: 1px dotted white; padding: 0 6px;">ESPERIENZA SINESTICA</div></span>
         <span>45.4642° N<br>9.1900° E</span>
         <span style="text-align: right;">PSICHE<br>SPECCHIO<br>ABOUT</span>
       </div>
