--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="model-name" style="
       position: fixed;
-      bottom: 22px;
+      bottom: 37px;
       left: 50%;
       transform: translateX(-50%);
       padding: 4px 4px;
@@ -38,7 +38,8 @@
       border-radius: 8px;
       font-size: 1.2rem;
       font-family: ClashGrotesk-variable, sans-serif;
-      color: white;
+      font-weight: 350;
+      color: rgb(240, 240, 240);
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s ease;
