--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="info-top-bar">
         <span style="text-align: left;">FLATFADE<br>2025</span>
         <span><div style="border: 1px dotted white; padding: 0 6px;">ESPERIENZA SINESTICA</div></span>
-        <span>45.4642° N<br>9.1900° E</span>
+        <span style="text-align: right;">45.4642° N<br>9.1900° E</span>
         <span style="text-align: right;">PSICHE<br>SPECCHIO<br>ABOUT</span>
       </div>
       <div class="info-bottom-left">
@@ -30,12 +30,11 @@
 
     <div id="model-name" style="
       position: fixed;
-      bottom: 37px;
+      bottom: 6.5%;
       left: 50%;
       transform: translateX(-50%);
       padding: 4px 4px;
       background-color: rgba(0, 0, 0, 1); 
-      border-radius: 8px;
       font-size: 1.2rem;
       font-family: ClashGrotesk-variable, sans-serif;
       font-weight: 350;
