--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <div class="InformazioniBase">
       <div class="info-top-bar">
         <span style="text-align: left;">FLATFADE<br>2025</span>
-        <span><div style="border: 1px dotted white; padding: 0 6px;">ESPERIENZA SINESTICA</div></span>
+        <span><div style="border: 1px dotted white; padding: 2px 8px;">ESPERIENZA SINESTICA</div></span>
         <span style="text-align: right;">45.4642° N<br>9.1900° E</span>
         <span style="text-align: right;">PSICHE<br>SPECCHIO<br>ABOUT</span>
       </div>
       <div class="info-bottom-left">
-        NOME: DARIO, AKA DERIANSKY <br>
-        ANNO DI NASCITA: 1999 <br>
-        LUOGO DI NASCITA: REGGIO EMILIA <br>
-        PROFESSIONE: RAPPER , PRODUCER 
+        <span class="label">NOME:</span> DARIO, AKA DERIANSKY <br>
+        <span class="label">ANNO DI NASCITA:</span> 1999 <br>
+        <span class="label">LUOGO DI NASCITA:</span> REGGIO EMILIA <br>
+        <span class="label">PROFESSIONE:</span> RAPPER , PRODUCER 
       </div>
       <div class="info-bottom-right">
-        ETICHETTE DISCOGRAFICHE: ASIAN FAKE<br>
-        GENERE MUSICALE: RAP / EXPERIMENTAL / ELECTRO<br>
+        <span class="label">ETICHETTE DISCOGRAFICHE:</span> ASIAN FAKE<br>
+        <span class="label">GENERE MUSICALE:</span> RAP / EXPERIMENTAL / ELECTRO<br>
         <br>
-        ATTIVITÀ: 14 - ATTUALE</div>
+        <span class="label">ATTIVITÀ:</span> 14 - ATTUALE</div>
     </div>
 
     <div id="model-name" style="
@@ -45,7 +45,7 @@
       white-space: nowrap;
       z-index: 2;">
     </div>
-
+    <div id="loading-screen"></div> <!-- Schermata di caricamento -->
     <div id="black-fade"></div><!-- Overlay per fare transizione al click dei link -->
 
     <!-- chiude il div informazioni base -->
