--- a/index.html
+++ b/index.html
@@ -30,20 +30,24 @@
 
     <div id="model-name" style="
       position: fixed;
-      bottom: 6.5%;
+      bottom: 7.5%;
       left: 50%;
       transform: translateX(-50%);
-      padding: 4px 4px;
+      padding: 5px 5px;
       background-color: rgba(0, 0, 0, 1); 
-      font-size: 1.2rem;
+      font-size: 1.32rem;
       font-family: ClashGrotesk-variable, sans-serif;
-      font-weight: 350;
+      font-weight: 450;
       color: rgb(240, 240, 240);
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s ease;
       white-space: nowrap;
+      filter: blur(0.5px);
+      letter-spacing: 1px;
       z-index: 2;">
+    </div>
+
     </div>
     <div id="loading-screen"></div> <!-- Schermata di caricamento -->
     <div id="black-fade"></div><!-- Overlay per fare transizione al click dei link -->
