--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="InformazioniBase">
       <div class="info-top-bar">
         <span style="text-align: left;">FLATFADE<br>2025</span>
-        <span><div style="border: 2px dotted white; padding: 2px 8px;">ESPERIENZA SINESTICA</div></span>
+        <span><div style="border: 1px dashed white; padding: 2px 8px;">ESPERIENZA SINESTETICA</div></span>
         <span style="text-align: right;">45.4642° N<br>9.1900° E</span>
         <span style="text-align: right;">PSICHE<br>SPECCHIO<br>ABOUT US</span>
       </div>
